--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ],
-  "tailwindStylesheet": "./app/app.css"
+	"useTabs": true,
+	"singleAttributePerLine": true,
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"tailwindStylesheet": "./app/app.css"
 }
