--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 	"dependencies": {
 		"@react-router/node": "^7.2.0",
 		"@react-router/serve": "^7.2.0",
+		"@sinclair/typebox": "^0.34.33",
 		"isbot": "^5.1.17",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router": "^7.2.0",
-		"zod": "^3.24.2"
+		"react-router": "^7.2.0"
 	},
 	"devDependencies": {
 		"@react-router/dev": "^7.2.0",
