--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@react-router/serve": "^7.2.0",
 		"@sinclair/typebox": "^0.34.33",
 		"isbot": "^5.1.17",
+		"js-cookie": "^3.0.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-lottie-player": "^2.1.0",
 		"react-router": "^7.2.0"
 	},
 	"devDependencies": {
