--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-lottie-player": "^2.1.0",
-		"react-router": "^7.2.0"
+		"react-qr-code": "^2.0.16",
+		"react-router": "^7.2.0",
+		"remix-utils": "^8.7.0"
 	},
 	"devDependencies": {
 		"@react-router/dev": "^7.2.0",
